# using-python-in-science

./: .gitignore  README.md  magnet.txt  pyproject.toml  todo.md
project01/: console.py
project01/books/: Droga_Krolow-Brandon_Sanderson.txt  The_Way_of_Kings-Sanderson-Brandon.txt
project02/: ising.py
project03/: decorators.py
project04/: numba_ising.py
project05/: books.json  soup.py
project06/: ign_pc_news.json  selenium_scraping.py
project07/: de.ipynb
project08/: sympy_proj.ipynb
project09/: bokeh_proj.py
project10/: books.json  multiproc.py
